# f1-dash-data-parser

./: .gitignore  Cargo.toml  only-replay.data.txt
src/: file_loader.rs  history.rs  main.rs  merge.rs  parser.rs
src/parser/: deserializer.rs  models.rs
src/parser/models/: data.rs  markers.rs  updates.rs
